Fixed the remaining issues on IE without having to use a seperate script for IE. The file that was groud-frank-ie.css has now been renamed to groud-frank.css and the file that was groud-frank.css has now be depreciated to groud-frank-depreciated.css

--- a/css/questions-and-answers.css
+++ b/css/questions-and-answers.css
@@ -15,15 +15,8 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     position: relative;
-    /* background: linear-gradient(141deg, #abecd6, #fbed96); */
-    /* background-image: linear-gradient(-225deg, #20E2D7 0%, #F9FEA5 100%); */
-    /* background-image: linear-gradient(225deg, #9be15d, #00e3ae); */
-    /* background-image: linear-gradient(-225deg, #00e3ae 0%, #F9FEA5 100%); */
-    /*background-image: linear-gradient(-225deg, #136a8a 0%, #267871 100%);*/
-    /* background-image: linear-gradient(-225deg, #16222A 0%, #3A6073 100%);*/
-    /* background: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%); */
     width: 100%;
     min-height: 100vh;
     margin: 0px;
@@ -68,8 +61,6 @@ h4{
 
 .custom-nav-format{
   font-family: 'Inconsolata', monospace;
-  /* font-size: 50px; */
-  font-size: 3.5em;
   letter-spacing: 6px;
   color: #fff;
   list-style: none !important;
@@ -83,8 +74,6 @@ h4{
 
 .custom-nav-contact-format{
   font-family: 'Inconsolata', monospace;
-  /* font-size: 17px; */
-  font-size: 1.2em;
   color: #fff;
   list-style: none !important;
   text-decoration: none !important;
@@ -151,7 +140,10 @@ padding-bottom: 150px;
     align-items: center;
     position: relative;
     width: 100%;
-    bottom: 0%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     z-index: 22;
     padding: 0px;
     margin: 10% 0px 0px 0px;
@@ -174,6 +166,12 @@ padding-bottom: 150px;
 
 
   /*----------Media Queries----------*/
+
+  @media (max-width: 768px) {
+    p{
+        text-align: left;
+    }
+  }
 
   @media (max-width: 768px) {
     #questions-answers{
